Update scheduler image for docker registry

--- a/k8s/scheduler-deployment.yaml
+++ b/k8s/scheduler-deployment.yaml
@@ -47,5 +47,5 @@ spec:
       serviceAccountName: custom-scheduler
       containers:
       - name: custom-scheduler
-        image: custom-scheduler:latest
-        imagePullPolicy: Never
+        image: localhost:5000/custom-scheduler
+        imagePullPolicy: Always
